--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "leafs/cors": "*",
         "leafs/auth": "*",
         "leafs/db": "*",
-        "leafs/vite": "*"
+        "leafs/vite": "*",
+        "leafs/devtools": "^0.1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.16"
