--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build"
+    },
+    "dependencies": {
+        "yup": "^1.4.0"
     }
 }
